# osh-2026-labs

./: .gitignore  AGENTS.md  README.md
.github/: copilot-instructions.md
.memories/repo/: osh-2026-course.md  osh-2026-lab0-checklist.md
lab0/: CMakeLists.txt  Makefile  Makefile.old  bubblesort.cpp  bubblesort.hpp  linux.md  main.cpp  markdown.md  verify_all.sh
lab0/docs/: ai-log.md  risk-check.md  submission-checklist.md  trace.md  verification.md
lab0/docs/artifacts/: perf-stat.txt  run-make-debug.txt  run-make.txt
